Responsive Design added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </nav>
     <!-- navbar container end -->
 
-    <!-- sidebar constainer -->
+    <!-- sidebar container -->
     <aside class="sidebar container">
         <ul class="nav-links container">
             <li><a href="#" class="nav-link active">Home</a></li>
@@ -40,7 +40,7 @@
     </aside>
     <!-- sidebar container end -->
 
-    <!-- Grid container1 start -->
+    <!-- Bento container start -->
     <div class="bento-container container">
         <div class="bento-container-center">
             <div class="about">
@@ -72,24 +72,76 @@
                     <article class="school">
                         <h1 class="header">P B Siddhartha Jr College of Arts & Science, Vijayawada</h1>
                         <p class="qualification">Board of Intermediate Education [M.P.C]</p>
-                        <p class="percentage">percentage: 87.4% <span class="year">2021 - 2024</span></p>
+                        <p class="percentage">percentage: 91.9% <span class="year">2019 - 2021</span></p>
                     </article>
                     <div class="underline text-center"></div>
                     <article class="school">
                         <h1 class="header">Rose Bud [E.M] High School, Vijayawada</h1>
                         <p class="qualification">Secondary School Certificate</p>
-                        <p class="percentage">percentage: 87.4% <span class="year">2021 - 2024</span></p>
+                        <p class="percentage">percentage: 92% <span class="year">2018 - 2019</span></p>
                     </article>
                 </div>
             </div>
             <div class="project-list">
                 <p class="heading">projects</p>
-
+                <article class="project">
+                    <h1 class="header">BCS College of Institute</h1>
+                    <p class="para">A responsive design of College website by using HTML, CSS, JS.</p>
+                    <a href="https://bcs-institute-of-technology.netlify.app/" target="_blank">Live Preview</a>
+                </article>
+                <div class="underline"></div>
+                <article class="project">
+                    <h1 class="header">Skylands Airplane Website</h1>
+                    <p class="para">A responsive design of Airplane website by using HTML, CSS, JS.</p>
+                    <a href="https://skylands-company.netlify.app/" target="_blank">Live Preview</a>
+                </article>
+                <div class="underline"></div>
+                <article class="project">
+                    <h1 class="header">HomeLab: Windows Server 2022</h1>
+                    <p class="para">Configured AD DS, DNS, DHCP, and implemented backup and recovery solutions on Windows Server 2022 for efficient network management and data protection</p>
+                    <a href="https://drive.google.com/file/d/1ShSrMlxvTVE4y7KaUw7IrNpmORQ0vl4D/view?usp=drive_link" target="_blank">Documentation</a>
+                </article>
+            </div>
+            <div class="skills">
+                <p class="heading">skills</p>
+                <div class="skill-list">
+                    <div class="track">
+                        <div class="skill">
+                            <img src="./assests/HTML-logo.png" alt="HTML">
+                        </div>
+                        <div class="skill">
+                            <img src="./assests/CSS-logo.png" alt="CSS">
+                        </div>
+                        <div class="skill">
+                            <img src="./assests/Bootstrap-logo.png" alt="BootStrap">
+                        </div>
+                        <div class="skill">
+                            <img src="./assests/Java-logo.png" alt="Java">
+                        </div>
+                        <div class="skill">
+                            <img src="./assests/office365-logo.png" alt="O365">
+                        </div>
+                        <div class="skill">
+                            <img src="./assests/HyperV-Logo.png" alt="Hyper-V">
+                        </div>
+                        <div class="skill">
+                            <img src="./assests/oracle-virtualbox-logo.png" alt="VirtualBox">
+                        </div>
+                        <div class="skill">
+                            <img src="./assests/vmware-logo.png" alt="VMWare">
+                        </div>
+                        <div class="skill">
+                            <img src="./assests/Windows10-Logo.png" alt="Windows 10">
+                        </div>
+                        <div class="skill">
+                            <img src="./assests/server22-logo.png" alt="Server 2022">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <!-- Grid container1 end -->
-
+    <!-- Bento container end -->
     <script src="./js/app.js"></script>
 </body>
 </html>
