Bento Portfolio Completed

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <h1>babji chandra sekhar</h1>
             </div>
             <ul class="nav-links">
-                <li><a href="#" class="nav-link active">Home</a></li>
-                <li><a href="#" class="nav-link">Projects</a></li>
-                <li><a href="#" class="nav-link">Contact</a></li>
+                <li><a href="index.html" class="nav-link active">Home</a></li>
+                <li><a href="project.html" class="nav-link">Projects</a></li>
+                <li><a href="contact.html" class="nav-link">Contact</a></li>
             </ul>
             <div class="hamburger">
                 <div class="line"></div>
@@ -33,9 +33,9 @@
     <!-- sidebar container -->
     <aside class="sidebar container">
         <ul class="nav-links container">
-            <li><a href="#" class="nav-link active">Home</a></li>
-            <li><a href="#" class="nav-link">Projects</a></li>
-            <li><a href="#" class="nav-link">Contact</a></li>
+            <li><a href="index.html" class="nav-link active">Home</a></li>
+            <li><a href="project.html" class="nav-link">Projects</a></li>
+            <li><a href="contact.html" class="nav-link">Contact</a></li>
         </ul>
     </aside>
     <!-- sidebar container end -->
